fix column resizing and add global to density classes

--- a/packages/mantine-react-table/src/buttons/MRT_ExpandAllButton.module.css
+++ b/packages/mantine-react-table/src/buttons/MRT_ExpandAllButton.module.css
@@ -8,10 +8,10 @@
   &:hover {
     opacity: 1;
   }
-  &.xl {
+  &:global(.xl) {
     margin-left: -6px;
   }
-  &.md {
+  &:global(.md) {
     margin-left: 0;
   }
   .chevron {
