--- a/packages/mantine-react-table/src/toolbar/MRT_ToolbarAlertBanner.module.css
+++ b/packages/mantine-react-table/src/toolbar/MRT_ToolbarAlertBanner.module.css
@@ -27,10 +27,10 @@
   padding: 8px 16px;
   &.head-overlay {
     padding: 2px;
-    &.xl {
+    &:global(.xl) {
       padding: 16px;
     }
-    &.md {
+    &:global(.md) {
       padding: 8px;
     }
   }
