fix errors in css. caused filter input to lay out wrong

--- a/packages/mantine-react-table/src/footer/MRT_TableFooterCell.module.css
+++ b/packages/mantine-react-table/src/footer/MRT_TableFooterCell.module.css
@@ -10,9 +10,9 @@
   &.grid {
     display: grid;
   }
-  align: left;
+  text-align: left;
   &.group {
-    align: center;
+    text-align: center;
     justify-content: center;
   }
 }
