--- a/packages/mantine-react-table/src/head/MRT_TableHeadCell.module.css
+++ b/packages/mantine-react-table/src/head/MRT_TableHeadCell.module.css
@@ -21,7 +21,7 @@
 
 .root-grid {
   display: flex;
-  flexdirection: column;
+  flex-direction: column;
 }
 
 .root-virtualized {
@@ -137,5 +137,5 @@
 .content-actions {
   align-items: center;
   align-self: center;
-  whitespace: nowrap;
+  white-space: nowrap;
 }
