fix errors in css. (#176)
caused filter input to lay out wrong

--- a/packages/mantine-react-table/src/head/MRT_TableHeadCell.module.css
+++ b/packages/mantine-react-table/src/head/MRT_TableHeadCell.module.css
@@ -26,7 +26,7 @@
 
 .root-grid {
   display: flex;
-  flexdirection: column;
+  flex-direction: column;
 }
 
 .root-virtualized {
@@ -135,5 +135,5 @@
 .content-actions {
   align-items: center;
   align-self: center;
-  whitespace: nowrap;
+  white-space: nowrap;
 }
