--- a/packages/mantine-react-table/src/head/MRT_TableHeadCellFilterLabel.module.css
+++ b/packages/mantine-react-table/src/head/MRT_TableHeadCellFilterLabel.module.css
@@ -1,15 +1,16 @@
 .root {
-  opacity: 0.5;
-  padding: 2px;
-  color: gray;
-  &.active {
-    opacity: 1;
-    color: var(--mantine-primary-color-filled);
-    @mixin hover {
-      color: var(--mantine-primary-color-filled-hover);
-    }
-  }
-  @mixin hover {
-    opacity: 1;
+  transition: all 100ms ease;
+  --ai-size: var(--ai-size-sm);
+  --ai-bg: transparent;
+  --ai-hover: light-dark(
+    var(--mantine-color-gray-1),
+    var(--mantine-color-dark-6)
+  );
+  --ai-color: light-dark(
+    var(--mantine-color-gray-5),
+    var(--mantine-color-dark-3)
+  );
+  &[data-active] {
+    --ai-color: var(--mantine-primary-color-filled);
   }
 }
