fix: hovered states for global menu sorting menu

--- a/packages/mantine-react-table/src/menus/MRT_ShowHideColumnsMenuItems.module.css
+++ b/packages/mantine-react-table/src/menus/MRT_ShowHideColumnsMenuItems.module.css
@@ -4,14 +4,14 @@
   justify-content: flex-start;
   opacity: 1;
   outline: none;
+  padding-left: var(--_column-depth);
   padding-top: rem(6px);
-  padding-bottom: rem(6px);
-  padding-bottom: calc((var(--_column-depth) + 0.5) * 2);
+  padding-bottom: rem(6);
   &[data-dragging] {
     opacity: 0.5;
     outline: 1px dashed var(--mantine-color-gray-7);
   }
-  &[data-hovered] {
+  &[data-order-hovered]:not(&[data-dragging]) {
     outline: 2px dashed var(--_hover-color);
   }
 }
