Use style props for padding

--- a/packages/mantine-react-table/src/body/MRT_TableDetailPanel.module.css
+++ b/packages/mantine-react-table/src/body/MRT_TableDetailPanel.module.css
@@ -25,12 +25,7 @@
 }
 
 .inner-expanded {
-  padding: 16px !important;
-  border-bottom: rem(1px) solid var(--_table-border-color) !important;
-}
-
-.inner-collapsed {
-  padding: 0 !important;
+  border-bottom: rem(1px) solid var(--_table-border-color);
 }
 
 .inner-virtual {
