--- a/packages/mantine-react-table/src/components/head/MRT_TableHeadCellResizeHandle.module.css
+++ b/packages/mantine-react-table/src/components/head/MRT_TableHeadCellResizeHandle.module.css
@@ -1,18 +1,11 @@
 .root {
-  cursor: col-resize;
-  position: absolute;
-  border-radius: 2px;
-  right: 0px;
-  width: 3px;
-  height: 24px;
-  margin-right: -10px;
-  &:global(.md) {
-    margin-right: -16px;
-  }
-  &:global(.xl) {
-    margin-right: -22px;
-  }
+  --resize-handle-thickness: 4px;
   background: var(--mantine-color-placeholder);
+  border-radius: 2px;
+  cursor: col-resize;
+  height: 24px;
+  position: absolute;
+  width: var(--resize-handle-thickness);
   &:hover {
     background: var(--mantine-primary-color-filled-hover);
   }
@@ -20,4 +13,32 @@
     background: var(--mantine-primary-color-filled);
   }
   transform: var(--mrt-transform);
+}
+
+.root-ltr {
+  right: 0px;
+  margin-right: -10px;
+  &:global(.md) {
+    margin-right: -16px;
+  }
+  &:global(.xl) {
+    margin-right: -22px;
+  }
+}
+
+.root-rtl {
+  left: 0px;
+  margin-left: -10px;
+  &:global(.md) {
+    margin-left: -16px;
+  }
+  &:global(.xl) {
+    margin-left: -22px;
+  }
+}
+
+.root-hide {
+  &:active {
+    opacity: 0;
+  }
 }
