--- a/packages/mantine-react-table/src/components/head/MRT_TableHeadCellSortLabel.module.css
+++ b/packages/mantine-react-table/src/components/head/MRT_TableHeadCellSortLabel.module.css
@@ -1,20 +1,23 @@
 .sort-icon {
   transition: all 100ms ease;
-  --ai-size: var(--ai-size-sm);
+  --ai-size: var(--ai-size-xs);
   --ai-bg: transparent;
   --ai-hover: light-dark(
     var(--mantine-color-gray-1),
     var(--mantine-color-dark-6)
   );
-  --ai-color: light-dark(
+  color: light-dark(
     var(--mantine-color-gray-5),
     var(--mantine-color-dark-3)
   );
   &[data-sorted] {
-    --ai-color: var(--mantine-primary-color-filled);
+    color: var(--mantine-primary-color-filled);
   }
 }
 
 .multi-sort-indicator {
-  height: 18px;
+  --indicator-size: rem(16px);
+  --indicator-color: transparent;
+  --indicator-text-color: var(--mantine-color-bright);
+  height: var(--indicator-size);
 }
