--- a/packages/mantine-react-table/src/components/head/MRT_TableHeadCell.module.css
+++ b/packages/mantine-react-table/src/components/head/MRT_TableHeadCell.module.css
@@ -92,10 +92,11 @@
 }
 
 .content {
-  align-items: flex-start;
+  align-items: center;
   justify-content: flex-start;
   position: relative;
   width: 100%;
+  height: 100%;
 }
 
 .content-spaced {
