--- a/packages/mantine-react-table/src/components/buttons/MRT_ExpandButton.module.css
+++ b/packages/mantine-react-table/src/components/buttons/MRT_ExpandButton.module.css
@@ -7,10 +7,27 @@
   &:hover {
     opacity: 1;
   }
+}
+
+.root-ltr {
+  margin-left: calc(calc(var(--mrt-row-depth, 0)) * 16px);
   .chevron {
-    transition: transform 100ms;
+    transition: transform 200ms;
     &.right {
-      transform: rotate(-90deg);
+      transform: rotate(270deg);
+    }
+    &.up {
+      transform: rotate(-180deg);
+    }
+  }
+}
+
+.root-rtl {
+  margin-right: calc(calc(var(--mrt-row-depth, 0)) * 16px);
+  .chevron {
+    transition: transform 200ms;
+    &.right {
+      transform: rotate(-270deg);
     }
     &.up {
       transform: rotate(180deg);
