--- a/packages/mantine-react-table/src/components/toolbar/MRT_BottomToolbar.module.css
+++ b/packages/mantine-react-table/src/components/toolbar/MRT_BottomToolbar.module.css
@@ -8,6 +8,8 @@
   left: 0;
   right: 0;
   position: relative;
+  border-top: 1px solid
+    light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
 }
 
 .bottom-toolbar-fullscreen {
