--- a/packages/mantine-react-table/src/components/footer/MRT_TableFooterRow.module.css
+++ b/packages/mantine-react-table/src/components/footer/MRT_TableFooterRow.module.css
@@ -5,4 +5,6 @@
     display: flex;
   }
   background-color: light-dark(var(--light-bg-color), var(--dark-bg-color));
+  border-top: 1px solid
+    light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
 }
