--- a/packages/mantine-react-table/src/components/toolbar/MRT_BottomToolbar.module.css
+++ b/packages/mantine-react-table/src/components/toolbar/MRT_BottomToolbar.module.css
@@ -8,7 +8,7 @@
   left: 0;
   right: 0;
   position: relative;
-  border-top: 1px solid
+  border-top: .5px solid
     light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
 }
 
