--- a/packages/mantine-react-table/src/components/body/MRT_TableBodyCell.module.css
+++ b/packages/mantine-react-table/src/components/body/MRT_TableBodyCell.module.css
@@ -1,16 +1,80 @@
 .root {
   --resize-border-color: var(--mantine-primary-color-filled);
-  --hover-color: var(--mantine-primary-color-filled);
-  --drag-color: var(--mantine-color-gray-7);
   --resize-thickness: 2px;
-  --hover-thickness: 2px;
-  --drag-thickness: 1px;
 
   background-clip: padding-box;
   text-align: var(--mrt-align, left);
   overflow: hidden;
   transition: padding 150ms ease-in-out;
-  @mixin hover {
+
+  &[data-column-pinned] {
+    background-color: light-dark(
+      var(--mantine-color-white),
+      var(--mantine-color-dark-7)
+    );
+    opacity: 0.98;
+    position: sticky;
+    z-index: 1;
+
+    &:before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: transparent;
+      z-index: -1;
+    }
+
+    &[data-column-pinned='left'] {
+      left: calc(var(--mrt-table-cell-left, 0) * 1px);
+      &[data-last-left-pinned] {
+        box-shadow: -4px 0 4px -4px light-dark(
+            var(--mantine-color-gray-outline),
+            var(--mantine-color-dark-outline)
+          ) inset;
+      }
+    }
+
+    &[data-column-pinned='right'] {
+      right: calc(var(--mrt-table-cell-right, 0) * 1px);
+      &[data-first-right-pinned] {
+        box-shadow: 4px 0 4px -4px light-dark(
+            var(--mantine-color-gray-outline),
+            var(--mantine-color-dark-outline)
+          ) inset;
+      }
+    }
+  }
+
+  &[data-dragging-column] {
+    z-index: 2;
+    border-left: var(--drag-thickness) dashed var(--drag-color);
+    border-right: var(--drag-thickness) dashed var(--drag-color);
+    &.last-row {
+      border-bottom: var(--drag-thickness) dashed var(--drag-color);
+    }
+  }
+
+  &[data-hovered-column-target] {
+    opacity: 0.5;
+    border-left: var(--hover-thickness) dashed var(--hover-color);
+    border-right: var(--hover-thickness) dashed var(--hover-color);
+    &.last-row {
+      border-bottom: var(--hover-thickness) dashed var(--hover-color);
+    }
+  }
+
+  &[data-resizing='ltr'] {
+    border-right: var(--resize-thickness) solid var(--resize-border-color);
+  }
+
+  &[data-resizing='rtl'] {
+    border-left: var(--resize-thickness) solid var(--resize-border-color);
+  }
+
+  &:hover {
     outline-offset: -1px;
     text-overflow: clip;
   }
@@ -33,6 +97,10 @@
   display: flex;
 }
 
+.root-virtualized {
+  transition: none;
+}
+
 .root-data-col {
   text-overflow: ellipsis;
 }
@@ -48,102 +116,5 @@
 .root-editable-hover {
   @mixin hover {
     outline: 1px solid var(--mantine-color-gray-7);
-  }
-}
-
-.root-virtualized {
-  transition: none;
-}
-
-.root-pinned {
-  z-index: 1;
-  position: sticky;
-  background-color: light-dark(
-    var(--mantine-color-white),
-    var(--mantine-color-dark-7)
-  );
-  opacity: 0.98;
-
-  &:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: transparent;
-    z-index: -1;
-  }
-}
-
-.root-pinned-left {
-  left: calc(var(--mrt-table-cell-left, 0) * 1px);
-}
-
-.root-pinned-right {
-  right: calc(var(--mrt-table-cell-right, 0) * 1px);
-}
-
-.root-pinned-left-last {
-  box-shadow: -4px 0 4px -4px light-dark(
-      var(--mantine-color-gray-outline),
-      var(--mantine-color-dark-outline)
-    ) inset;
-}
-
-.root-pinned-right-first {
-  box-shadow: 4px 0 4px -4px light-dark(
-      var(--mantine-color-gray-outline),
-      var(--mantine-color-dark-outline)
-    ) inset;
-}
-
-.resizing-ltr {
-  border-right: var(--resize-thickness) solid var(--resize-border-color);
-}
-
-.resizing-rtl {
-  border-left: var(--resize-thickness) solid var(--resize-border-color);
-}
-
-.dragging-column {
-  z-index: 2;
-  border-left: var(--drag-thickness) dashed var(--drag-color);
-  border-right: var(--drag-thickness) dashed var(--drag-color);
-  &.last-row {
-    border-bottom: var(--drag-thickness) dashed var(--drag-color);
-  }
-}
-
-.hovered-column {
-  opacity: 0.5;
-  border-left: var(--hover-thickness) dashed var(--hover-color);
-  border-right: var(--hover-thickness) dashed var(--hover-color);
-  &.last-row {
-    border-bottom: var(--hover-thickness) dashed var(--hover-color);
-  }
-}
-
-.dragging-row {
-  z-index: 2;
-  border-top: var(--drag-thickness) dashed var(--drag-color);
-  border-bottom: var(--drag-thickness) dashed var(--drag-color);
-  &.last-column {
-    border-right: var(--drag-thickness) dashed var(--drag-color);
-  }
-  &.first-column {
-    border-left: var(--drag-thickness) dashed var(--drag-color);
-  }
-}
-
-.hovered-row {
-  opacity: 0.5;
-  border-top: var(--hover-thickness) dashed var(--hover-color);
-  border-bottom: var(--hover-thickness) dashed var(--hover-color);
-  &.last-column {
-    border-right: var(--hover-thickness) dashed var(--hover-color);
-  }
-  &.first-column {
-    border-left: var(--hover-thickness) dashed var(--hover-color);
   }
 }
