fix extra props react warning

--- a/packages/mantine-react-table/src/components/body/MRT_TableBody.module.css
+++ b/packages/mantine-react-table/src/components/body/MRT_TableBody.module.css
@@ -31,3 +31,10 @@
   text-align: center;
   width: 100%;
 }
+
+.pinned {
+  bottom: calc(var(--mrt-table-footer-height, unset) * 1px - 1px);
+  position: sticky;
+  top: calc(var(--mrt-table-head-height, unset) * 1px - 1px);
+  z-index: 1;
+}
