--- a/packages/mantine-react-table/src/components/body/MRT_TableBodyRow.module.css
+++ b/packages/mantine-react-table/src/components/body/MRT_TableBodyRow.module.css
@@ -1,6 +1,4 @@
 .root {
-  --hover-color: var(--mantine-primary-color-filled);
-  --drag-color: var(--mantine-color-gray-7);
   --hover-thickness: 3px;
   --drag-thickness: 1px;
 
@@ -9,17 +7,14 @@
   width: 100%;
 
   &[data-selected] {
-    background-color: var(--mantine-primary-color-light);
+    background-color: var(--mrt-selected-row-background-color);
 
     td {
       &[data-column-pinned] {
-        background-color: light-dark(
-          var(--mantine-color-white),
-          var(--mantine-color-dark-7)
-        );
+        background-color: var(--mrt-pinned-column-background-color);
 
         &:before {
-          background-color: var(--mantine-primary-color-light);
+          background-color: var(--mrt-selected-row-background-color);
         }
       }
     }
@@ -30,10 +25,7 @@
     opacity: 0.98;
     top: calc(var(--mrt-pinned-row-top, unset) * 1px);
     td {
-      background-color: light-dark(
-        var(--mantine-color-dark-0),
-        var(--mantine-color-dark-8)
-      );
+      background-color: var(--mrt-pinned-row-background-color);
     }
   }
 
@@ -45,37 +37,25 @@
   &[data-hover] {
     &:hover {
       td {
-        background-color: light-dark(
-          var(--mantine-color-dark-light-hover),
-          var(--mantine-color-gray-light-hover)
-        );
+        background-color: var(--mrt-row-hover-background-color);
 
         &[data-column-pinned] {
-          background-color: light-dark(
-            var(--mantine-color-white),
-            var(--mantine-color-dark-7)
-          );
+          background-color: var(--mrt-base-background-color);
 
           &:before {
-            background-color: light-dark(
-              var(--mantine-color-dark-light-hover),
-              var(--mantine-color-gray-light-hover)
-            );
+            background-color: var(--mrt-row-hover-background-color);
           }
         }
       }
       &[data-selected] {
         td {
-          background-color: var(--mantine-primary-color-light-hover);
+          background-color: var(--mrt-selected-row-hover-background-color);
 
           &[data-column-pinned] {
-            background-color: light-dark(
-              var(--mantine-color-white),
-              var(--mantine-color-dark-7)
-            );
+            background-color: var(--mrt-base-background-color);
 
             &:before {
-              background-color: var(--mantine-primary-color-light-hover);
+              background-color: var(--mrt-selected-row-hover-background-color);
             }
           }
         }
@@ -100,13 +80,17 @@
   &[data-hovered-row-target] {
     td {
       opacity: 0.5;
-      border-top: var(--hover-thickness) dashed var(--hover-color);
-      border-bottom: var(--hover-thickness) dashed var(--hover-color);
+      border-top: var(--hover-thickness) dashed
+        var(--mrt-dragging-hovered-border-color);
+      border-bottom: var(--hover-thickness) dashed
+        var(--mrt-dragging-hovered-border-color);
       &:first-child {
-        border-left: var(--hover-thickness) dashed var(--hover-color);
+        border-left: var(--hover-thickness) dashed
+          var(--mrt-dragging-hovered-border-color);
       }
       &:last-child {
-        border-right: var(--hover-thickness) dashed var(--hover-color);
+        border-right: var(--hover-thickness) dashed
+          var(--mrt-dragging-hovered-border-color);
       }
     }
   }
