--- a/packages/mantine-react-table/src/components/table/MRT_Table.module.css
+++ b/packages/mantine-react-table/src/components/table/MRT_Table.module.css
@@ -1,7 +1,7 @@
-.root-grid {
-  display: grid;
+.root {
+  background-color: var(--mrt-base-background-color);
 }
 
-.root-semantic-not-resizing {
-  table-layout: fixed;
+.root-grid {
+  display: grid;
 }
