--- a/packages/mantine-react-table/src/components/toolbar/MRT_BottomToolbar.module.css
+++ b/packages/mantine-react-table/src/components/toolbar/MRT_BottomToolbar.module.css
@@ -1,4 +1,5 @@
 .root {
+  background-color: var(--mrt-base-background-color);
   bottom: var(--mrt-bottom-toolbar-bottom);
   box-shadow: 0 1px 2px -1px color-mix(
       in srgb,
@@ -8,11 +9,11 @@
   left: 0;
   right: 0;
   position: relative;
-  border-top: .5px solid
+  border-top: 0.5px solid
     light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
 }
 
-.bottom-toolbar-fullscreen {
+.root-fullscreen {
   position: fixed !important;
   bottom: 0;
 }
